# Kontor

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  LICENSE  README.md
contracts/: Cargo.toml  build.sh
contracts/amm/src/: lib.rs
contracts/amm/wit/: contract.wit
contracts/arith/: Cargo.toml
contracts/arith/src/: lib.rs
contracts/arith/wit/: contract.wit
contracts/crypto/: Cargo.toml
contracts/crypto/src/: lib.rs
contracts/crypto/wit/: contract.wit
contracts/eval/: Cargo.toml
contracts/eval/src/: lib.rs
contracts/eval/wit/: contract.wit
contracts/fib/: Cargo.toml
contracts/fib/src/: bindings.rs  lib.rs
contracts/fib/wit/: contract.wit  world.wit
contracts/native-token/: Cargo.toml
contracts/native-token/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/pool/wit/: contract.wit
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs
contracts/proxy/wit/: contract.wit
contracts/shared-account/: Cargo.toml
contracts/shared-account/src/: lib.rs
contracts/shared-account/wit/: contract.wit
contracts/stdlib/: Cargo.toml
contracts/stdlib/src/: lib.rs  monoid.rs
contracts/stdlib/wit/: stdlib.wit
contracts/sum/: Cargo.toml
contracts/sum/src/: lib.rs
contracts/sum/wit/: contract.wit  world.wit
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/token/wit/: contract.wit
core/: Cargo.toml  README.md  TESTING.md
core/.github/workflows/: ci.yml
core/indexer/: Cargo.toml  build.rs
core/indexer-types/: Cargo.toml
core/indexer-types/src/: lib.rs
core/indexer/sqlean-0.27.2/macos-arm64/: regexp.dylib
core/indexer/sqlean-0.27.2/macos-x86/: crypto.dylib  regexp.dylib
core/indexer/sqlean-0.28.0/macos-arm64/: crypto.dylib  regexp.dylib
core/indexer/sqlean-0.28.0/macos-x64/: crypto.dylib  regexp.dylib
core/indexer/src/: block.rs  config.rs  event.rs  legacy_test_utils.rs  lib.rs  logging.rs  main.rs  multi_psbt_test_utils.rs  reg_tester.rs  regtest_utils.rs  stopper.rs  test_utils.rs  testlib_exports.rs  utils.rs  witness_data.rs
core/indexer/src/api/: client.rs  compose.rs  env.rs  error.rs  handlers.rs  mod.rs  result.rs  router.rs  ws.rs  ws_client.rs
core/indexer/src/bitcoin_client/: client.rs  error.rs  types.rs
core/indexer/src/bitcoin_follower/: ctrl.rs  events.rs  messages.rs  mod.rs  reconciler.rs  rpc.rs  zmq.rs
core/indexer/src/database/: connection.rs  contracts.rs  init.rs  mod.rs  native_contracts.rs  pool.rs  queries.rs  types.rs  writer.rs
core/indexer/src/reactor/: challenges.rs  events.rs  mod.rs  results.rs  types.rs
core/indexer/src/runtime/: component_cache.rs  context.rs  contracts.rs  counter.rs  dot_path_buf.rs  file_ledger.rs  filestorage.rs  foreign.rs  fuel.rs  mod.rs  native_contracts.rs  numerics.rs  pool.rs  stack.rs  storage.rs  storage_agreement.rs  token.rs  types.rs
core/indexer/tests/: amm_contract.rs  api_load_tests.rs  bitcoin_client.rs  bitcoin_follower.rs  bitcoin_follower_prop.rs  commit_reveal.rs  commit_reveal_random_keypair.rs  compose.rs  compose_api.rs  compose_commit_unit.rs  compose_helpers.rs  compose_helpers_unit_tests.rs  compose_reveal_unit.rs  contract_load_tests.rs  crypto_contract.rs  database.rs  dot_path_buf.rs  event_subscriber.rs  fib_contract.rs  file_descriptor.rs  file_ledger.rs  file_storage.rs  get_blocks_query.rs  get_results_query.rs  get_transactions_query.rs  handle_new_mempool_transactions.rs  legacy_commit_reveal_p2wsh.rs  legacy_segwit_envelope.rs  legacy_segwit_swap.rs  legacy_taproot_envelope.rs  legacy_taproot_swap.rs  load_tests.rs  multi_psbt_integration.rs  multi_psbt_integration_breakdown.rs  multi_psbt_security.rs  multi_psbt_tx_validation.rs  native_filestorage_contract.rs  native_storage_agreement_contract.rs  native_token_attach_contract.rs  native_token_contract.rs  (+34 more)
core/indexer/tests/compose/: commit_reveal.rs  commit_reveal_random_keypair.rs  compose_api.rs  compose_commit_unit.rs  legacy_segwit_envelope.rs  mod.rs  multi_psbt_integration_breakdown.rs  multi_psbt_tx_validation.rs  (+1 more)
core/kontor/: Cargo.toml
core/kontor/sqlean/: crypto.dylib
core/kontor/src/: main.rs
core/kontor/tests/: database.rs  dot_path_buf.rs  fib_contract.rs  fib_contract_next.rs  get_transactions.rs  get_transactions_query.rs  handle_new_mempool_transactions.rs  reactor.rs  reactor_prop.rs  reconciler.rs  rollback.rs  transactions_api.rs  transactions_api_pagination.rs  trigger.rs
core/macro/: Cargo.toml
core/macro/src/: lib.rs
core/macros/: Cargo.toml
core/macros/src/: contract.rs  contract_address.rs  impls.rs  import.rs  interface.rs  lib.rs  model.rs  root.rs  runtime.rs  store.rs  test.rs  transformers.rs  utils.rs  wavey.rs  wrapper.rs
core/stdlib/: Cargo.toml
core/stdlib/src/: dot_path_buf.rs  foreign.rs  lib.rs  memory_storage.rs  storage_interface.rs  wave_interfaces.rs
core/stdlib/tests/: dot_path_buf.rs  macros.rs
core/stdlib/wit/: stdlib.wit
core/testlib/: Cargo.toml
core/testlib/src/: lib.rs
core/ui/: Cargo.toml  README.md
core/ui/frontend/: package-lock.json  package.json
core/ui/src/: main.rs
core/wit-validator/: Cargo.toml  line-numbers.md  rules.md
core/wit-validator/src/: error.rs  lib.rs  rules.rs  types.rs
native-contracts/: Cargo.toml  build.sh
native-contracts/binaries/: filestorage.wasm.br  filestoragemock.wasm.br  storage_agreement.wasm.br  token.wasm.br
native-contracts/filestorage/: Cargo.toml
native-contracts/filestorage/src/: lib.rs
native-contracts/filestorage/wit/: contract.wit
native-contracts/filestoragemock/: Cargo.toml
native-contracts/filestoragemock/src/: lib.rs
native-contracts/filestoragemock/wit/: contract.wit
native-contracts/storage-agreement/: Cargo.toml
native-contracts/storage-agreement/src/: lib.rs
native-contracts/storage-agreement/wit/: contract.wit
native-contracts/token/src/: lib.rs
native-contracts/token/wit/: contract.wit
ui/: Cargo.toml
ui/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/frontend/src/: App.css  App.tsx
ui/src/: main.rs
(+315 files in other folders)
