[package]
name = "kontor"
version = "0.1.0"
edition = "2024"

[dependencies]
backon = { version = "1.4", features = ["tokio-sleep"] }
anyhow = "1"
base64 = "0.22.1"
bitcoin = { version = "0.32.5", features = ["serde", "rand", "rand-std"] }
deadpool = "0.12.2"
libsql = "0.6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1"
tracing-subscriber = "0.3"
zmq = "0.10.0"
scopeguard = "1.2.0"
rayon = "1.10.0"
indexmap = "2.7.1"
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.8", features = ["http2", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = [
  "logging",
  "std",
  "ring",
  "tls12",
], default-features = false }
tower-http = { version = "0.6", features = [
  "request-id",
  "trace",
  "timeout",
  "catch-panic",
  "cors",
] }
tower = "0.5"
rustls-native-certs = "0.8"
futures-util = "0.3"
hex = "0.4"
bip39 = "1.0"
ciborium = "0.2"
bon = "3.6"
axum-test = "17.3"
urlencoding = "2.1"

[dev-dependencies]
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
