[workspace]
members = ["contracts/fib", "contracts/stdlib", "kontor", "macro", "ui"]
resolver = "2"


[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["http2", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = [
  "fs",
  "trace",
  "compression-full",
  "request-id",
  "timeout",
  "catch-panic",
  "cors",
] }
tower = "0.5"
wasmtime = { version = "33.0.0", features = ["wave"] }
