[workspace]
members = ["indexer", "indexer-types", "macros", "stdlib", "testlib"]
resolver = "2"

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# IMPORTANT
wasmtime = { version = "=39.0.1", features = ["wave", "component-model-async"] }
wit-bindgen = "=0.50.0"
wit-component = "=0.243.0"
wit-parser = "=0.243.0"
wasm-wave = { version ="0.243.0", default-features = false }

anyhow = { version = "=1.0.100", default-features = false }
axum = { version = "=0.8.8", features = ["http2", "ws"] }
bon = { version = "=3.8.1", default-features = false, features = ["alloc"] }
tokio = { version = "=1.48.0", features = ["full"] }
tower-http = { version = "=0.6.8", features = [
  "fs",
  "trace",
  "compression-full",
  "request-id",
  "timeout",
  "catch-panic",
  "cors",
] }
tower = "=0.5.2"
tracing = "=0.1.44"
libsql = "=0.9.29"
glob = "=0.3.3"
async-trait = "=0.1.89"
tempfile = "=3.24.0"
serial_test = "=3.2.0"
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.148", default-features = false, features = ["alloc"] }
serde_with = { version = "=3.16.1", default-features = false, features = ["alloc", "macros"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
ts-rs = { version = "=11.1.0", features = ["format"] }
indexmap = { version = "=2.12.1", features = ["serde"] }
bitcoin = { version = "=0.32.8", features = ["serde", "rand", "rand-std"] }
