[workspace]
members = ["token", "filestorage"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"
unit_arg = "allow"

[workspace.dependencies]
stdlib = { path = "../core/stdlib" }
