[package]
name = "indexer-types"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
macros = { path = "../macros" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
postcard = { workspace = true }
wit-bindgen = { workspace = true }
