[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kontor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
stdlib = { path = "../stdlib" }
macros = { path = "../macros" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
wasmtime = { workspace = true }
wasm-wave = { workspace = true }
wit-component = { workspace = true }
libsql = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
tempfile = { workspace = true }

backon = { version = "=1.6.0", features = ["tokio-sleep"] }
base64 = "=0.22.1"
bitcoin = { version = "=0.32.7", features = ["serde", "rand", "rand-std"] }
deadpool = "=0.12.3"
reqwest = { version = "=0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_with = { version = "=3.15.1", features = ["base64"] }
thiserror = "=2.0.17"
tokio-util = "=0.7.16"
tracing-subscriber = "=0.3.20"
zmq = "=0.10.0"
scopeguard = "=1.2.0"
rayon = "=1.11.0"
indexmap = "=2.12.0"
clap = { version = "=4.5.50", features = ["derive", "env"] }
axum-server = { version = "=0.7.2", features = ["tls-rustls-no-provider"] }
rustls = { version = "=0.23.34", features = [
  "logging",
  "std",
  "ring",
  "tls12",
], default-features = false }
rustls-native-certs = "=0.8.2"
futures-util = "=0.3.31"
hex = "=0.4.3"
bip39 = "=2.2.0"
ciborium = "=0.2.2"
axum-test = "=18.1.0"
urlencoding = "=2.1.3"
proptest = "=1.8.0"
lru = "=0.16.2"
rand = "=0.9.2"
brotli = "=8.0.2"
sha2 = "=0.10.9"
num = "=0.4.3"
fastnum = "=0.7.3"
strum = { version = "=0.27.2", features = ["derive"] }
rustls-pemfile = "=2.2.0"
tokio-tungstenite = { version = "=0.28.0", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "=1.18.1", features = ["v4"] }

[dev-dependencies]
testlib = { path = "../testlib" }

once_cell = "=1.21.3"
serial_test = { workspace = true }

[build-dependencies]
glob = { workspace = true }
