[package]
name = "indexer"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "kontor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
stdlib = { path = "../stdlib" }
macros = { path = "../macros" }
indexer-types = { path = "../indexer-types" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
wasmtime = { workspace = true }
wasm-wave = { workspace = true }
wit-component = { workspace = true }
libsql = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true }
indexmap = { workspace = true }
bitcoin = { workspace = true }

backon = { version = "=1.6.0", features = ["tokio-sleep"] }
base64 = "=0.22.1"
deadpool = "=0.12.3"
reqwest = { version = "=0.13.1", default-features = false, features = ["http2", "json", "rustls"] }
thiserror = "=2.0.17"
tokio-util = "=0.7.18"
tracing-subscriber = { version = "=0.3.22", features = ["json"] }
zmq = "=0.10.0"
scopeguard = "=1.2.0"
rayon = "=1.11.0"
clap = { version = "=4.5.54", features = ["derive", "env"] }
axum-server = "=0.8.0"
futures-util = "=0.3.31"
hex = "=0.4.3"
rand = "=0.9.2"
brotli = "=8.0.2"
sha2 = "=0.10.9"
num = "=0.4.3"
fastnum = "=0.7.4"
strum = { version = "=0.27.2", features = ["derive"] }
tokio-tungstenite = { version = "=0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing-stackdriver = "=0.10.0"
regex = "=1.12.2"
kontor-crypto = "=0.1.4"
ff = "=0.13.1"
moka = { version = "0.12.11", features = ["future"] }

[dev-dependencies]
testlib = { path = "../testlib" }

once_cell = "=1.21.3"
axum-test = "=18.5.0"
proptest = "=1.9.0"

[build-dependencies]
glob = { workspace = true }
built = { version = "=0.8.0", features = ["git2"] }
