[package]
name = "kontor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
kontor-macro = { path = "../macro" }
stdlib = { path = "../stdlib" }

anyhow = { workspace = true }
backon = { version = "1.4", features = ["tokio-sleep"] }
base64 = "0.22.1"
bitcoin = { version = "0.32.6", features = ["serde", "rand", "rand-std"] }
deadpool = "0.12"
libsql = "0.9.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio-util = "0.7"
tracing = { workspace = true }
tracing-subscriber = "0.3"
zmq = "0.10"
scopeguard = "1.2"
rayon = "1.10"
indexmap = "2.9"
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = [
  "logging",
  "std",
  "ring",
  "tls12",
], default-features = false }
rustls-native-certs = "0.8"
futures-util = "0.3"
hex = "0.4"
bip39 = "2.1"
ciborium = "0.2"
bon = "3.6"
axum-test = "17.3"
urlencoding = "2.1"
proptest = "1.6"
wasmtime = { workspace = true }
wit-component = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
sha2 = "0.10.9"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
