[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
wit-parser = { workspace = true }
anyhow = { workspace = true }

syn = {version = "=2.0.109", features = ["full"]}
quote = "=1.0.41"
proc-macro2 = "=1.0.103"
darling = "=0.21.3"
heck = "=0.5.0"
