[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
wit-parser = { workspace = true }
anyhow = { workspace = true }

syn = {version = "=2.0.114", features = ["full"]}
quote = "=1.0.43"
proc-macro2 = "=1.0.105"
darling = "=0.23.0"
heck = "=0.5.0"
