[package]
name = "testlib"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
macros = { path = "../macros" }
indexer = { path = "../indexer" }
anyhow = { workspace = true }
libsql = { workspace = true }
bon = { workspace = true }
tokio = { workspace = true }
glob = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
wasm-wave = { workspace = true }
serial_test = { workspace = true }
