[package]
name = "filestoragemock"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
stdlib = { workspace = true }
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]
